# bt-knowledge-base

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TODO.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: guard.sh
doc/: bt-knowledge-base.md
doc/categories/: archiving.md  build-packaging.md  cloud-clis.md  containers-orchestration.md  databases.md  disk.md  files-directories.md  hardware-devices.md  http-api-clients.md  infrastructure-as-code.md  languages-scripting.md  markup-docs.md  network-config-firewall.md  network-diagnostics.md  package-managers.md  performance-profiling.md  remote-access.md  search.md  security-secrets.md  shell-terminal.md  system-services.md  text-data-processing.md  version-control.md
src/kb/: __init__.py  capture.py  cli.py  notes.py  roots.py
tests/: test_kb.py
tool-notes/: 7z.md  README.md  apt.md  awk.md  aws.md  az.md  bq.md  brew.md  broot.md  cron.md  df.md  direnv.md  dmesg.md  docker.md  doggo.md  gcloud.md  gh.md  gitleaks.md  glow.md  go-one-liners.md  go.md  gpg.md  gradle.md  graphviz.md  grip.md  gsutil.md  helm.md  htmlq.md  htop.md  just.md  kubectl.md  lsblk.md  lscpu.md  lsof.md  lspci.md  make.md  ncdu.md  openssl.md  packer.md  pandoc.md  (+25 more)
