[project]
name = "bt-kb"
version = "0.1.0"
description = "get/put for the bt-knowledge-base notes repo (curated, searchable shell history)"
requires-python = ">=3.10"
dependencies = ["typer>=0.12"]

[project.scripts]
kb = "kb.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer's API requires Argument()/Option() calls in parameter defaults.
"src/kb/cli.py" = ["B008"]
